--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,6 @@ project( NetworkingLib )
 
 file( GLOB_RECURSE ${PROJECT_NAME}_SOURCES "*.cpp" )
 
-add_library( ${PROJECT_NAME} SHARED ${${PROJECT_NAME}_SOURCES} )
+add_library( ${PROJECT_NAME} STATIC ${${PROJECT_NAME}_SOURCES} )
 
 target_include_directories( NetworkingLib PUBLIC "." "../include" )
